logo spacing fix

--- a/app/assets/stylesheets/_logo.css.scss
+++ b/app/assets/stylesheets/_logo.css.scss
@@ -1,7 +1,7 @@
 .logo{
   text-transform: uppercase;
   font-size: $large;
-  list-style: 1em;
+  line-height: 1em;
   .letter{
     will-change: true;
     padding: 0.2em 0;
